[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/PlayerControllers/PlayerInstance.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PrefabScenes/PlayerDonut.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerTietokone.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerKeppi.gd" type="Script" id=4]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerSanomalehti.gd" type="Script" id=5]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerNuotio.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerMitjaTalossa.gd" type="Script" id=7]
[ext_resource path="res://Scripts/PlayerControllers/Game/PlayerMelonta.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PlayerControllers/State/PlayerLobby.gd" type="Script" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/palamecia-titling/palamecia titling.ttf"

[sub_resource type="DynamicFont" id=2]
size = 31
font_data = SubResource( 1 )

[node name="PlayerInstance" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_top = -64.0
margin_right = 128.0

[node name="ReadyLabel" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Valmis!!"
align = 1
valign = 1

[node name="PlayerVisual" parent="." instance=ExtResource( 2 )]

[node name="PlayerGameControllers" type="Node2D" parent="."]

[node name="PlayerMelonta" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 8 )

[node name="PlayerTietokone" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 3 )

[node name="PlayerSanomalehti" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 5 )

[node name="PlayerNuotio" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 6 )

[node name="PlayerKeppi" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 4 )

[node name="PlayerMitjaTalossa" type="Node2D" parent="PlayerGameControllers"]
script = ExtResource( 7 )

[node name="PlayerStateControllers" type="Node2D" parent="."]

[node name="PlayerLobby" type="Node2D" parent="PlayerStateControllers"]
script = ExtResource( 9 )

[node name="PlayerGame" type="Node2D" parent="PlayerStateControllers"]

[node name="PlayerFinish" type="Node2D" parent="PlayerStateControllers"]
